RESOLVED FIXED145024
Cyrillic top-level domains are displayed as punycode
https://bugs.webkit.org/show_bug.cgi?id=145024
Summary Cyrillic top-level domains are displayed as punycode
Alexey Proskuryakov
Reported 2015-05-14 15:35:22 PDT
There is a number of Cyrillic top level domains delegated and active now, and we only support .рф. rdar://problem/14116594 rdar://problem/17747133
Attachments
proposed fix (10.21 KB, patch)
2015-05-14 16:13 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2015-05-14 16:13:31 PDT
Created attachment 253152 [details] proposed fix
WebKit Commit Bot
Comment 2 2015-05-14 16:16:30 PDT
Attachment 253152 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:288: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:308: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:317: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:329: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:339: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:352: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:362: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:373: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:382: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:394: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:406: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:418: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:430: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:442: One space before end of line comments [whitespace/comments] [5] Total errors found: 14 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2015-05-15 10:43:23 PDT
Comment on attachment 253152 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=253152&action=review > Source/WebCore/platform/mac/WebCoreNSURLExtras.mm:409 > + // Russian and Ukrainian letters, digits and dashes are allowed. You could use isRussianDomainNameCharacter here and just add in the few additional ones.
WebKit Commit Bot
Comment 4 2015-05-15 11:43:23 PDT
Comment on attachment 253152 [details] proposed fix Clearing flags on attachment: 253152 Committed r184401: <http://trac.webkit.org/changeset/184401>
WebKit Commit Bot
Comment 5 2015-05-15 11:43:27 PDT
All reviewed patches have been landed. Closing bug.
rottese
Comment 7 2019-03-09 20:56:51 PST
Note You need to log in before you can comment on or make changes to this bug.