Cyrillic top-level domains are displayed as punycode https://bugs.webkit.org/show_bug.cgi?id=145024 rdar://problem/17747133 rdar://problem/14116594

Reviewed by Tim Horton.

Handling each TLD in code is annoying, but we can probably survive like this
for a few more years, and maybe we'll think of an entirely different way to deal
with non-ASCII domain labels in the meanwhile.

* platform/mac/WebCoreNSURLExtras.mm:
(WebCore::isSecondLevelDomainNameAllowedByTLDRules):
(WebCore::allCharactersAllowedByTLDRules):


Canonical link: https://commits.webkit.org/163090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184401 268f45cc-cd09-0410-ab3c-d52691b4dbfc